# Cpp-PrymusiAGH

./: script_bask
cpp-lab1/build-ex3qt-Desktop_Qt_6_6_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  ex3qt
cpp-lab1/build-ex3qt-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
cpp-lab1/ex2/: add.cpp  add.h  ex2  main  main.asm  main.pproc
cpp-lab1/ex2qt/: CMakeLists.txt  add.cpp  add.h  main.cpp
cpp-lab1/ex3qt/: CMakeLists.txt  main.cpp
cpp-lab2/ex1/: arrays.cpp  ex1  ex2  ex3  ex3.cpp  ex4  ex4.cpp  ex5  ex5.cpp  ex6  ex6.cpp  inference_aliases  inference_aliases.cpp  main  main.cpp  main_wynik
cpp-lab3/ex1/: main  main.cpp
cpp-lab3/ex2/: main  main.cpp
cpp-lab3/ex3/: main  main.cpp
cpp-lab3/ex4/: main  main.cpp
cpp-lab3/ex5/: main  main.cpp
cpp-lab4/ex1/: main  main.cpp
cpp-lab4/ex2/: main  main.cpp
cpp-lab4/ex3/: main  main.cpp
cpp-lab4/ex4/: header  header.cpp  rational.h
cpp-lab5/ex1/: main  main.cpp
cpp-lab5/ex2/: main  main.cpp
cpp-lab5/ex3/: main  main.cpp
cpp-lab5/ex4/: main  main.cpp
cpp-lab5/ex5/: main  main.cpp
cpp-lab6/ex1/: main  main.cpp
cpp-lab6/ex2/: main  main.cpp  v1.txt  vec2D.txt  vec2d.cpp  vec2d.h
cpp-lab6/ex3/: main  main.cpp
cpp-lab6/ex4/: input.cpp  main  main.cpp  result  result.cpp
cpp-lab7/ex1/: main  main.cpp
cpp-lab7/ex2/: main  main.cpp
cpp-lab7/ex3/: ArrayStack.h  Pair.h  Stack.h  main  main.cpp  stack_vec_impl.h
cpp-lab7/ex4/: main
(+7 files in other folders)
